# mpower

./: .gitignore  COPYING  Makefile.am  README  configure.ac  mpower-libs.pc.in
mpower/: mpower.h
python/: mpower.py
src/: Makefile.am  mpower.c
test/: Makefile.am  mpowerTest.c
